# hydra-python-sweeper

./: README.md  pyproject.toml
example/: train.py
example/config/: multilayer.py  multilayer.yaml
example/config/subconfig/: subconfig.py
hydra_plugins/python_sweeper_plugin/: python_sweeper.py  utils.py
tests/: test_python_sweeper_plugin.py
tests/configs/: overrides.py  overrides.yaml
tests/configs/subconfigs/: subconfig.py
